--- a/UnityGame/UnityGame.csproj
+++ b/UnityGame/UnityGame.csproj
@@ -36,10 +36,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\..\..\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>C:\Program Files\Unity20170201p3\Editor\Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\..\..\..\..\Program Files\Unity\Editor\Data\UnityExtensions\Unity\GUISystem\UnityEngine.UI.dll</HintPath>
+      <HintPath>C:\Program Files\Unity20170201p3\Editor\Data\UnityExtensions\Unity\GUISystem\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +68,7 @@
     <Compile Include="Interface\IApp.cs" />
     <Compile Include="Interface\IBindable.cs" />
     <Compile Include="Event\IEventDispatcher.cs" />
+    <Compile Include="Manager\ArchiveManager.cs" />
     <Compile Include="Manager\IManagement.cs" />
     <Compile Include="Manager\IManager.cs" />
     <Compile Include="Manager\NetworkManager.cs" />
