--- a/UnityGame/UnityGame.csproj
+++ b/UnityGame/UnityGame.csproj
@@ -57,9 +57,9 @@
     <Compile Include="Base\UScene.cs" />
     <Compile Include="Cache\GameObjectPool.cs" />
     <Compile Include="Cache\ObjectPool.cs" />
-    <Compile Include="Components\AnimComponent.cs" />
-    <Compile Include="Components\BuffComponent.cs" />
-    <Compile Include="Components\MoveComponent.cs" />
+    <Compile Include="Component\AnimComponent.cs" />
+    <Compile Include="Component\BuffComponent.cs" />
+    <Compile Include="Component\MoveComponent.cs" />
     <Compile Include="Config\AppConf.cs" />
     <Compile Include="Enum\Enum.cs" />
     <Compile Include="Event\Event.cs" />
@@ -73,14 +73,21 @@
     <Compile Include="Event\IEventDispatcher.cs" />
     <Compile Include="Interface\IComponent.cs" />
     <Compile Include="Manager\ArchiveManager.cs" />
+    <Compile Include="Manager\IEffect.cs" />
     <Compile Include="Manager\IManagement.cs" />
     <Compile Include="Manager\IManager.cs" />
     <Compile Include="Manager\NetworkManager.cs" />
     <Compile Include="MVC\BasePanel.cs" />
     <Compile Include="MVC\BaseWindow.cs" />
     <Compile Include="MVC\Command.cs" />
+    <Compile Include="MVC\DataProvider.cs" />
+    <Compile Include="MVC\LuaAdapter.cs" />
     <Compile Include="MVC\Mediator\BaseGUIMediator.cs" />
     <Compile Include="MVC\Mediator\BaseMediator.cs" />
+    <Compile Include="Manager\UIModuleManager.cs" />
+    <Compile Include="MVC\UIModule.cs" />
+    <Compile Include="MVC\UIContainer.cs" />
+    <Compile Include="Manager\UIPlayEffectManager.cs" />
     <Compile Include="NetStream\ByteBuffer.cs" />
     <Compile Include="NetStream\Converter.cs" />
     <Compile Include="NetStream\Protocal.cs" />
